艰难地处理类变量

--- a/event_config.json
+++ b/event_config.json
@@ -1,7 +1,7 @@
 [
 	{"level" : 0,
 	"Stick" : {"NEW" : {   "method" : ["update2", "update2", "updateAll"],
-							"obj_p" : ["m.Lv1_L[-1]", "m.PCLv0_L[0]", "m.CLv0_L[0]"],
+							"obj_p" : ["m.Lv1_L[-1]", "m.PCLv0_L[0]", "Center0"],
 							"param": ["","",""]},
 				"PEAK" :  { "method" : ["updateLastSt"],
 							"obj_p" : ["m.PCLv0_L[0]"],
@@ -17,7 +17,7 @@
 	},
 	{"level" : 1,		
 	"TrendLv1" : {"NEW" : {   "method" : ["update2", "update2", "updateAll"],
-							"obj_p" : ["m.Lv2_L[-1]", "m.PCLv1_L[0]", "m.CLv1_L[0]"],
+							"obj_p" : ["m.Lv2_L[-1]", "m.PCLv1_L[0]", "Center1"],
 							"param": ["","",""]},
 				"PEAK" :  { "method" : ["updateLastSt"],
 							"obj_p" : ["m.PCLv1_L[0]"],
@@ -34,7 +34,7 @@
 	},
 	{"level" : 2,		
 	"TrendLv2" : {"NEW" : {   "method" : ["update2", "update2", "updateAll"],
-							"obj_p" : ["m.Lv3_L[-1]", "m.PCLv2_L[0]", "m.CLv2_L[0]"],
+							"obj_p" : ["m.Lv3_L[-1]", "m.PCLv2_L[0]", "Center2"],
 							"param": ["","",""]},
 				"LVUPD" : {  "method" : ["updatePeakP"],
 							"obj_p" : ["m.Lv3_L[-1]"],
@@ -44,7 +44,7 @@
 	},
 	{"level" : 3,		
 	"TrendLv3" : {"NEW" : {   "method" : ["updateAll"],
-							"obj_p" : ["m.CLv3_L[0]"],
+							"obj_p" : ["Center3"],
 							"param": [""]},
 				"LVUPD" : {  "method" : [""],
 							"obj_p" : [""],
